updated notebook documentation

--- a/adaptive_taxonomy_mapper.ipynb
+++ b/adaptive_taxonomy_mapper.ipynb
@@ -79,6 +79,15 @@
             ]
         },
         {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "**cosine_similarity**: Computes how semantically similar two vectors are by measuring the cosine of the angle between them.\n",
+                "\n",
+                "**extract_contributions**: Identifies the top words in the input text that most strongly contribute to a target category based on semantic similarity."
+            ]
+        },
+        {
             "cell_type": "code",
             "execution_count": 76,
             "metadata": {},
